import com.diffplug.spotless.extra.wtp.EclipseWtpFormatterStep
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

plugins {
	alias(libs.plugins.idea)
	alias(libs.plugins.java)
	alias(libs.plugins.jacoco)
	alias(libs.plugins.jacoco.report.aggregation)
	alias(libs.plugins.spotless)
	alias(libs.plugins.sonarqube)
	alias(libs.plugins.post.compile.weaving)
}

defaultTasks 'clean', 'spotlessApply', 'build'

sonar {
	properties {
		property "sonar.projectKey", "ipv-cri-uk-passport-api"
		property "sonar.organization", "govuk-one-login"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.java.coveragePlugin", "jacoco"
		property "sonar.coverage.jacoco.xmlReportPath", layout.buildDirectory.file("reports/jacoco/reports/reports.xml")
	}
}

// This generates an aggregate test report at "${buildDir}/reports/jacoco/reports/reports.xml"
reporting {
	reports {
		reports(JacocoCoverageReport) {
			testSuiteName = "test"
		}
	}
}

dependencies {
	if (!System.getenv('AC_TEST_ONLY')) {
		jacocoAggregation project(':lib'),
				project(':lib-dvad'),
				project("lambdas:checkpassport"),
				project("lambdas:issuecredential"),
				project("lambdas:certexpiryreminder")
	}
}

spotless {
	java {
		target "**/src/**/*.java"
		googleJavaFormat("1.35.0").aosp().formatJavadoc(true)
		importOrder "", "javax", "java", "\\#"
		removeUnusedImports()
		forbidWildcardImports()
		formatAnnotations()
		endWithNewline()
	}
	groovyGradle {
		target '**/*.gradle'
		greclipse()
		trimTrailingWhitespace()
		endWithNewline()
	}
	shell {
		target '*.sh'
		trimTrailingWhitespace()
		endWithNewline()
	}
	gherkin {
		target 'acceptance-tests/src/test/resources/**/*.feature'
		gherkinUtils()
		endWithNewline()
	}
	flexmark {
		target '**/*.md'
		flexmark()
		endWithNewline()
	}
	format 'xml', {
		target '**/*.xml'
		eclipseWtp(EclipseWtpFormatterStep.XML)
		endWithNewline()
	}
	format 'json', {
		target '**/*.json'
		eclipseWtp(EclipseWtpFormatterStep.JSON)
		endWithNewline()
	}
	format 'misc', {
		target '.gitignore', '.dockerignore', '.sdkmanrc'
		trimTrailingWhitespace()
		leadingSpacesToTabs(4)
		endWithNewline()
	}
}

subprojects {
	apply plugin: 'jacoco'
	apply plugin: libs.plugins.post.compile.weaving.get().pluginId
	apply plugin: 'org.sonarqube'

	plugins.withId('java') {
		java {
			toolchain {
				languageVersion = JavaLanguageVersion.of(25)
			}
		}

		configurations {
			mockitoAgent
		}

		configurations.configureEach {
			// These clients are excluded as we are using the aws-crt client exclusively
			// https://aws.amazon.com/blogs/developer/tuning-the-aws-java-sdk-2-x-to-reduce-startup-time/
			exclude group:"software.amazon.awssdk", module: "apache-client"
			exclude group:"software.amazon.awssdk", module: "netty-nio-client"
			exclude group:"software.amazon.awssdk", module: "url-connection-client"

			// Exclude netty in general but allow for webdriver manager in acceptance tests (browser download)
			if (project.name != 'acceptance-tests') {
				exclude group: "io.netty", module: "*"
				exclude group: "io.grpc", module: "grpc-netty"
			}
		}

		tasks.withType(JavaCompile).configureEach {
			options.compilerArgs << "-Xlint"
		}

		dependencies {
			mockitoAgent platform(libs.mockito.bom)
			mockitoAgent(libs.mockito.core) {
				transitive = false
			}

			testImplementation platform(libs.junit.platform.bom)
			testImplementation platform(libs.mockito.bom)
			testImplementation libs.bundles.unit.testing

			testRuntimeOnly "org.junit.platform:junit-platform-launcher"
		}

		// Use a common log4j2.xml for all subprojects
		tasks.register('copyLog4j2Config', Copy) {
			from rootProject.file('shared-resources/log4j2.xml')
			from rootProject.file('shared-resources/CustomLambdaJsonLayout.json')
			into layout.buildDirectory.dir('resources/main')
		}

		tasks.matching { it.name in ['processResources', 'jar'] }.configureEach {
			dependsOn tasks.named('copyLog4j2Config')
		}

		test {
			useJUnitPlatform {
				excludeTags 'Pact'
			}
			jvmArgs("-javaagent:${configurations.mockitoAgent.asPath}", "-Xshare:off")
			finalizedBy jacocoTestReport, jacocoTestCoverageVerification
			testLogging {
				events = [
					TestLogEvent.PASSED,
					TestLogEvent.SKIPPED,
					TestLogEvent.FAILED
				]
				showStandardStreams = false
				showExceptions = true
				showCauses = true
				exceptionFormat = TestExceptionFormat.FULL
				displayGranularity = 2
			}
			afterSuite { suite, result ->
				if (!suite.parent) {
					def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
					def startItem = "|  ", endItem = "  |"
					def repeatLength = startItem.length() + output.length() + endItem.length()
					println("\n" + ("-" * repeatLength) + "\n" + startItem + output + endItem + "\n" + ("-" * repeatLength))
				}
			}
		}

		tasks.register("pactTests", Test) {
			useJUnitPlatform {
				includeTags 'Pact'
			}
			jacoco {
				enabled = false
			}
			testClassesDirs = sourceSets.test.output.classesDirs
			classpath = sourceSets.test.runtimeClasspath
		}

		jacocoTestReport {
			reports {
				xml.required.set(true)
			}
		}

		jacocoTestCoverageVerification {
			violationRules {
				rule {
					limit {
						counter = 'LINE'
						minimum = 0.95
					}
					limit {
						counter = 'BRANCH'
						minimum = 0.95
					}
				}
			}
		}
	}
}

clean.doFirst {
	delete "${rootDir}/dist/"
	delete "${rootDir}/.aws-sam"
}
